fixed bug with zoom on mobile devices

--- a/src/components/plan/_Plan.scss
+++ b/src/components/plan/_Plan.scss
@@ -20,10 +20,11 @@
   width: 100%;
 
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+}
+
+.react-transform-wrapper,
+.react-transform-component {
+  height: 100%; /* Стили от библиотеки react-zoom-pan-pinch 'В коде вы их не найдете' */
 }
 
 .plan__image {
@@ -142,8 +143,8 @@
   transform: translateY(200px);
 
   transform: translateY(200px);
-    max-height: 0;
-    opacity: 0;
+  max-height: 0;
+  opacity: 0;
 }
 
 .menu_wrapper {
@@ -177,4 +178,3 @@
   pointer-events: none;
   transition: opacity 500ms;
 }
-
